use java 8 compatible methods